--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,6 @@
         },
         "target": "ES2017"
     },
-    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx","**/*.js", "**/*.jsx", ".next/types/**/*.ts"],
     "exclude": ["node_modules"]
 }
