date range picker & oauth

--- a/package.json
+++ b/package.json
@@ -15,54 +15,36 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@internationalized/date": "^3.5.5",
+    "@nextui-org/react": "^2.4.6",
     "@payloadcms/db-mongodb": "beta",
     "@payloadcms/next": "beta",
     "@payloadcms/plugin-cloud": "beta",
     "@payloadcms/richtext-lexical": "beta",
     "@payloadcms/storage-s3": "beta",
-    "@radix-ui/react-accordion": "^1.2.0",
-    "@radix-ui/react-alert-dialog": "^1.1.1",
-    "@radix-ui/react-aspect-ratio": "^1.1.0",
-    "@radix-ui/react-avatar": "^1.1.0",
-    "@radix-ui/react-checkbox": "^1.1.1",
-    "@radix-ui/react-collapsible": "^1.1.0",
-    "@radix-ui/react-context-menu": "^2.2.1",
-    "@radix-ui/react-dialog": "^1.1.1",
-    "@radix-ui/react-dropdown-menu": "^2.1.1",
-    "@radix-ui/react-hover-card": "^1.1.1",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-menubar": "^1.1.1",
-    "@radix-ui/react-navigation-menu": "^1.2.0",
-    "@radix-ui/react-popover": "^1.1.1",
-    "@radix-ui/react-progress": "^1.1.0",
-    "@radix-ui/react-radio-group": "^1.2.0",
-    "@radix-ui/react-scroll-area": "^1.1.0",
-    "@radix-ui/react-select": "^2.1.1",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slider": "^1.2.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-switch": "^1.1.0",
-    "@radix-ui/react-tabs": "^1.1.0",
-    "@radix-ui/react-toast": "^1.2.1",
-    "@radix-ui/react-toggle": "^1.1.0",
-    "@radix-ui/react-toggle-group": "^1.1.0",
-    "@radix-ui/react-tooltip": "^1.1.2",
+    "@react-aria/i18n": "^3.12.1",
+    "@react-types/datepicker": "^3.8.1",
+    "@react-types/shared": "^3.24.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "cross-env": "^7.0.3",
+    "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.1.6",
+    "framer-motion": "^11.3.20",
     "graphql": "^16.8.1",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.408.0",
     "next": "15.0.0-rc.0",
+    "next-cookie": "^2.8.0",
     "next-themes": "^0.3.0",
     "payload": "beta",
     "react": "^19.0.0-rc-6230622a1a-20240610",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0-rc-6230622a1a-20240610",
     "react-hook-form": "^7.52.1",
+    "react-hot-toast": "^2.4.1",
     "react-resizable-panels": "^2.0.20",
     "recharts": "^2.12.7",
     "sharp": "0.32.6",
